cfn_benchmark/cfn_templates/manpaz__aws/cloudformation/bashlinux_alb_ec2-security-group.yaml
---
# Bashlinux::Public ALB::EC2 Security Group
#
#   Cloudformation template to deploy a security group
#   for an ALB in front of the application servers
#   in the public subnet
#
#   Manuel F Martinez
#   Bashlinux
#   Los Angeles, CA
#
AWSTemplateFormatVersion: "2010-09-09"
Description: EC2 Public ALB Security Group template

###############################################################################
Parameters:

  Environment:
    Description: EC2 ALB environment
    Type: String
    MinLength: "1"
    MaxLength: "20"
    Default: staging
    AllowedValues: [ "prod", "staging" ]
    ConstraintDescription: >
      Environment name can only contain "prod" or "staging".

###############################################################################
Resources:

  Ec2PublicAlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable access to the HTTP/HTTPS ports
      VpcId: !ImportValue
        "Fn::Sub": "bashlinux-${Environment}-VpcId"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: "80"
        ToPort: "80"
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: "80"
        ToPort: "80"
        CidrIpv6: "::/0"
      - IpProtocol: tcp
        FromPort: "443"
        ToPort: "443"
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: "443"
        ToPort: "443"
        CidrIpv6: "::/0"
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: "80"
        ToPort: "80"
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: "80"
        ToPort: "80"
        CidrIpv6: "::/0"
      - IpProtocol: tcp
        FromPort: "443"
        ToPort: "443"
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: "443"
        ToPort: "443"
        CidrIpv6: "::/0"
      Tags:
      - Key: Name
        Value: !Sub "bashlinux-${Environment}-public-alb-sg"
      - Key: bashlinux:environment-name
        Value: !Ref Environment
      - Key: bashlinux:application-id
        Value: !Ref AWS::StackName
      - Key: bashlinux:can-delete
        Value: "false"
      - Key: bashlinux:network-visibility
        Value: public

###############################################################################
Outputs:

  Ec2PublicAlbSecurityGroupId:
    Description: "EC2: Public ALB Security Group ID"
    Value: !GetAtt Ec2PublicAlbSecurityGroup.GroupId
    Export:
      Name: !Sub "bashlinux-${Environment}-Ec2PublicAlbSecurityGroupId"
